<resources>
    <string name="app_name">Frame</string>
    <string name="sign_up">회원가입</string>
    <string name="sign_up_email">이메일을 적어주세요.</string>
    <string name="sign_up_pw">비밀번호를 적어주세요.</string>
    <string name="sign_up_name">이름을 적어주세요.</string>
    <string name="log_in">로그인</string>
    <string name="log_in_email">이메일</string>
    <string name="log_in_pw">비밀번호</string>
    <string name="profile_btn">내 정보 변경</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="msg_token_fmt" />


</resources>