<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".LoginActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
     >

    <ImageView
        android:id="@+id/logo"
        android:layout_width="279dp"
        android:layout_height="216dp"
        android:layout_marginTop="80dp"
        app:layout_constraintVertical_bias="0.13"
        app:srcCompat="@drawable/app_logo" />



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_email"
            android:background="@color/white"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/log_in_email"
          ></com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutPw"
        android:layout_marginTop="25dp"
        app:passwordToggleEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_pw"
            android:background="@color/white"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/log_in_pw"
            android:inputType="textPassword"
           ></com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>


    <ProgressBar
        android:id="@+id/loading"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/btn_login"
        app:layout_constraintTop_toTopOf="@+id/textInputLayoutEmail" />

    <TextView
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/btnblack"
        android:gravity="center"
        android:text="@string/log_in"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintHorizontal_bias="0.492" />


    <com.kakao.usermgmt.LoginButton

        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/btn_findingIdPw_tv"
            android:layout_width="140dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="아이디/비밀번호 찾기" />

        <TextView
            android:id="@+id/btn_register_tv"
            android:layout_width="140dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="회원가입" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/btn_login"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/check_mail_again"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="인증 메일이 오지 않았나요?" />


    </LinearLayout>


    </LinearLayout>

  </ScrollView>

</LinearLayout>